2.0.4
	+ Remove dependency on dovecot-antispam moved to ebox-mailfilter
	+ Bugfix: Fixed some problems with size parsing in logs
	+ Bugfix: Remove a warning in consolidation of mail messages
	+ Improvements in reports
	  - Return data for end report period to show traffic per day
	  - Added top user sender/receiver per domain
	  - A single mail_message report is sent consisted of
	    sent, received and rejected mail messages
	  - Workarounded problems with unavailable domain in report table
	  - Bugfix: event in report table has the same definition that has
	    in log table
	+ Bugfix: don't query vdomains to LDAP if module is not enabled
2.0.3
	+ Added backup domain
	+ Increased size of event field in mail_message_report table
	+ Autocreate user email always in lowercase
	+ Fixed dovecot mailboxes config to avoid problems with some vdomains
	+ Set default order for dashboard widgets
2.0.2
	+ Don't regenerate user quotas if default quota doesn't change
2.0.1
	+ Bugfix: hooks didn't work (thanks to moebius for the patch)
1.5.5
	+ Add Zarafa integration with mail module
1.5.4
	+ Zentyal rebrand
1.5.3
	+ Bugfix: external accounts retrieval works again in lucid
1.5.2
	+ New setup wizard
1.5.1
	+ Use ssl-cert package to create default certificates as all other
	  eBox modules should be doing
	+ Added bridged mode support in firewall helper
1.5
	+ Update configuration templates with the newest versions from lucid
	+ Bugfix, dovecot ldap auth now works when using AD Sync
	+ Bugfix, using standard default smtp banner to avoid breaking
	banner checks. Thanks to ivo@housesbg.com for pointing this
	+ Now event's mail dispatcher uses configured mailname instead of
	non-qualified hostname
	+ Firewall default policy allows mail system from external
	networks because is the expected and usual thing
	+ Bugfix, is not longer allowed a external alias with the same address
	than a existent account
	+ Bugfix, addColumn message_type on mail_message table which should