@@ -1,3 +1,6 @@
+HEAD
+	+ Removed dovecot antispam plugin support until serious
+	  bug in the dovecot-antispam package from Ubuntu is fixed
 2.0.4
 	+ Remove dependency on dovecot-antispam moved to ebox-mailfilter
 	+ Bugfix: Fixed some problems with size parsing in logs
